policies/09-mutate-add-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-add-default-labels
spec:
  rules:
    - name: add-team-label
      match:
        any:
        - resources:
            kinds:
              - Pod
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              +(team): devops
              +(managed-by): kyverno
